flux/infrastructure/identity/logout-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logout-page
  namespace: identity
  labels:
    app: logout-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logout-page
  template:
    metadata:
      labels:
        app: logout-page
    spec:
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 1000
#        fsGroup: 1000
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:alpine3.24-perl
        resources:
          limits:
            memory: 64Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: html
        configMap:
          defaultMode: 420
          name: logout-page-html
