flux/infrastructure/identity/logout-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logout-page
  namespace: identity
spec:
  selector:
    app: logout-page
  ports:
  - name: http
    port: 80
    targetPort: 80
